third_party/move/move-compiler-v2/tests/checking/positional_fields/invalid_anonymous_field1.move
module 0x42::test {
    struct S(u8);

    fun foo(x: S) {
        x.0x42;
    }
}
